--- a/musicdb-app/Backend-django/templates/music_service/base.html
+++ b/musicdb-app/Backend-django/templates/music_service/base.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    {% block head%} {% endblock %}
+    <!--    {% block css %} {% endblock %}-->
+    <title>{% block title %} {% endblock %}</title>
+  </head>
 
-<head>
-    <meta charset="utf-8">
-<!--    {% block css %} {% endblock %}-->
-    <title>{% block title %} {% endblock %} </title>
-</head>
-
-<body>
-    <h1 id="title"> {% block heading %} {% endblock %} </h1>
-    <div id="content">
-        {% block content %} {% endblock %}
-    </div>
-</body>
+  <body>
+    <h1 id="title">{% block heading %} {% endblock %}</h1>
+    <div id="content">{% block content %} {% endblock %}</div>
+  </body>
 </html>
